kubernetes/mongo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mern 
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
