kubernetes/mongo/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-networkpolicy
  namespace: mern
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend        # केवल backend pod ले mongo access गर्न पाओस्
      ports:
        - protocol: TCP
          port: 27017             # MongoDB को default port
